z-index issue

--- a/portfolio.css
+++ b/portfolio.css
@@ -37,10 +37,12 @@ font-family: 'Oswald', sans-serif;
   color:black;
   font-family: 'Oswald', sans-serif;
   font-size: 40px;
+  z-index: 2
 }
 
 .navbar {
 margin-top:120px;
+
 }
 
 .menu .navbar{
@@ -141,6 +143,7 @@ font-family: 'Work Sans', sans-serif;
 color:black;
 padding-bottom:200px;
 position: absolute;
+z-index: 0;
 }
 
 #studyheader{
